--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"dependencies": {
 		"@arcgis/core": "^4.27.6",
+		"@babel/eslint-parser": "^7.22.15",
+		"@babel/preset-react": "^7.22.15",
 		"@tanstack/react-query": "^4.35.3",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
@@ -47,6 +49,7 @@
 		]
 	},
 	"devDependencies": {
+		"@storybook/preset-typescript": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
 		"eslint": "^8.49.0",
